swagger serve
